--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -3,7 +3,7 @@
 {% block content %}
     <body>
         <h2>User Sign Up</h2>
-        <form method='post'>
+        <form action='/sign_in' method='post'>
             <label for="username">Username
                 <input type="text" name="username" />
             </label>
