--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -5,19 +5,19 @@
         <h2>User Sign Up</h2>
         <form action='/sign_in' method='post'>
             <label for="username">Username
-                <input type="text" name="username" />
+                <input type="text" name="username" value={{username}} />
             </label>
             <p class="error">{{username_error}}</p>
             <label for="password">password
-                <input type="password" name="password" />
+                <input type="password" name="password" value={{password}} />
             </label>
             <p class="error">{{password_error}}</p>
             <label for="verify">Confirm Password
-                <input type="password" name="verify_password" />
+                <input type="password" name="verify_password" value={{verify_password}}/>
             </label>
             <p class="error">{{verify_error}}</p>
             <label for="email">Email (optional)
-                <input type="text" name="email" />
+                <input type="text" name="email" value={{email}}/>
             </label>
             <p class="error">{{email_error}}</p>   
             <input type="submit" value="Submit" />
