--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
-<h1>Hello, {{username}} </h1>
+{% block content %}
+
+    <h1>Hello, {{username}} </h1>
 
 {% endblock %}
